CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_train_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_train_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_train_hist</externalName>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>Ownership code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd__c</fullName>
        <description>cde_source_vrfyd</description>
        <externalDeveloperName>cde_source_vrfyd</externalDeveloperName>
        <label>How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_train__c</fullName>
        <description>cde_type_train</description>
        <externalDeveloperName>cde_type_train</externalDeveloperName>
        <label>Type of Training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Verification Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnt_credits_train__c</fullName>
        <description>cnt_credits_train</description>
        <externalDeveloperName>cnt_credits_train</externalDeveloperName>
        <label>Training Credit</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnt_week_per_hours_estmd__c</fullName>
        <description>cnt_week_per_hours_estmd</description>
        <externalDeveloperName>cnt_week_per_hours_estmd</externalDeveloperName>
        <label>Estimated Hours per week</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_compltn_exptd_train__c</fullName>
        <description>dte_compltn_exptd_train</description>
        <externalDeveloperName>dte_compltn_exptd_train</externalDeveloperName>
        <label>Expected training completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_train_indiv__c</fullName>
        <description>idn_train_indiv</description>
        <externalDeveloperName>idn_train_indiv</externalDeveloperName>
        <label>Training ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_TRAIN__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_TRAIN__c</referenceTo>
        <relationshipLabel>Training Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_train_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_train_indiv_hist__c</fullName>
        <description>idn_train_indiv_hist</description>
        <externalDeveloperName>idn_train_indiv_hist</externalDeveloperName>
        <label>Training ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_train_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_prog_acredd__c</fullName>
        <description>ind_prog_acredd</description>
        <externalDeveloperName>ind_prog_acredd</externalDeveloperName>
        <label>Accredated program indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_progrs_stftry__c</fullName>
        <description>ind_progrs_stftry</description>
        <externalDeveloperName>ind_progrs_stftry</externalDeveloperName>
        <label>Satisfactory Progress Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_skills_emplb__c</fullName>
        <description>ind_skills_emplb</description>
        <externalDeveloperName>ind_skills_emplb</externalDeveloperName>
        <label>Employee Skills</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_instn_train__c</fullName>
        <description>nam_instn_train</description>
        <externalDeveloperName>nam_instn_train</externalDeveloperName>
        <label>Training Institution</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_train_indiv__c</fullName>
        <description>nbr_seq_train_indiv</description>
        <externalDeveloperName>nbr_seq_train_indiv</externalDeveloperName>
        <label>Training Individual Sequence number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Training History</label>
    <pluralLabel>Training History</pluralLabel>
</CustomObject>